# AmorphousEngine

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Debug.h  Makefile  README.md  main.cpp  plugins.cfg  release.sh  setup.sh  unsetup.sh
Component/: BoxCollider.lua  Camera.lua  CharacterController.lua  Light.lua  MeshRender.lua  init.lua
Core/: Application.lua  Collision.lua  Color.lua  Debug.lua  GameObject.lua  Input.lua  KeyCode.lua  LuaBehaviour.lua  Object.lua  Quaternion.lua  Space.lua  Time.lua  Transform.lua  Vector3.lua  __all.lua  __external.lua  __lib.lua  __physics.lua  __runtime.lua  init.lua
Scenes/: level-0.json
Scripts/: Debug.lua  DroneController.lua  RotatesAroundY.lua  print-hello.lua
examples/01-lua-state-machine/: main.cpp
examples/02-lua/: debug-cmp.lua  degub-init.lua  demo1.lua
include/: Application.h  CalculationEngine.h  Color.h  Component.h  GameObject.h  GraphicsEEngine.h  GraphicsEngine.h  InputReader.h  InputReaderOIS.h  InputsState.h  Logger.h  PreUpdateFrameData.h  PrefabManager.h  Property.h  Quaternion.h  SceneState.h  TimeDelta.h  Vector3.h  helpers.h  types.h
include/Calculation/: Lua53.h  Lua53Generator.h
include/Core/: Color.h  Component.h  GameObject.h  KeyCode.h  Light.h  Property.h  Quaternion.h  Transform.h  Vector3.h
include/Graphics/: Irrlicht.h  Null.h  OgreNext.h  OgreOne.h
include/Graphics/OgreNext/: OgreNext.h  WindowEventListener.h  hlms.h  resources.h
projects/01-HelloWorld/: input-mapping.json
projects/01-HelloWorld/Models/: Ogre.material  RustyBarrel.material
projects/01-HelloWorld/Scenes/: level-0.json
projects/01-HelloWorld/Scripts/: ApplicationSystem.lua  DroneController.lua  SpinnerController.lua
projects/02-BattleCity-Clone/: README.md
projects/02-BattleCity-Clone/Models/: .gitignore  BaseBanner.material  BaseBanner.mesh  BrickWall.material  BrickWall.mesh  Projectile.material  Tank001.material  Tank001.mesh  Terrain.material  Terrain.mesh  battle-city.blend
projects/02-BattleCity-Clone/Models/doc/: README.md
projects/02-BattleCity-Clone/Prefabs/: Enemy-Tank1.json  Friend-Tank1.json  Obstacle-01-BrickWall.json  Projectile.json
projects/02-BattleCity-Clone/Scenes/: level-0.json
projects/02-BattleCity-Clone/Scripts/: ApplicationSystem.lua  BaseBanner.lua  EnemyController.lua  EnemyRespawnPoint.lua  EnemyRespawnSystem.lua  FriendController.lua  HittingSystem.lua  LevelGenerator.lua  Obstacle.lua  PhysicsSystem.lua  PhysicsSystemCustom.lua  PlayerController.lua  Projectile.lua  ProjectileController.lua  Tank.lua
projects/HelloWorld/Models/: Ogre.material
projects/HelloWorld/Scenes/: level-0.json
projects/HelloWorld/Scripts/: DroneController.lua  SpinnerController.lua  init.lua
src/: Application.cpp  Color.cpp  GameObject.cpp  GraphicsEngine.cpp  InputReader.cpp  InputReaderOIS.cpp  PrefabManager.cpp  SceneState.cpp
src/Calculation/: Lua53.cpp  Lua53Generator.cpp
src/Core/: Color.cpp  GameObject.cpp  KeyCode.cpp
src/Graphics/: Irrlicht.cpp  Null.cpp  OgreNext.cpp  OgreOne.cpp
src/Graphics/OgreNext/: OgreNext.cpp
test/: CMakeLists.txt
test/Core/: CMakeLists.txt  GameObject.cpp  LuaBehaviour.cpp  Object.cpp  Quaternion.cpp  Transform.cpp  Vector3.cpp
test/Core/testdata/Object/: positive1.lua
test/Core/testdata/Object/Destroy/: create_two_detroy_both.lua
test/Core/testdata/Object/FindObjectsOfType/: positive1.lua
test/Core/testdata/Object/Instantiate/: _01_create_2_clones.lua  create_2_clones.lua
test/benchmark/: CMakeLists.txt
test/benchmark/BattleCity/: CMakeLists.txt  InputReaderFake.h  Scene1.cpp  main.cpp  ogre.cfg
test/benchmark/BattleCity/testdata/Prefabs/: Enemy-Tank1.json  Obstacle-BrickWall.json  Projectile.json
test/benchmark/BattleCity/testdata/Scripts/: ApplicationSystem.lua  EnemyRespawnSystem.lua  HittingSystem.lua  LevelGenerator.lua  Obstacle.lua  PlayerController.lua  Tank.lua
test/integration/: Application.cpp  CMakeLists.txt  InputReaderFake.h  main.cpp  plugins.cfg
test/integration/testdata/Models/: Projectile.material  Projectile.mesh  Tank001.material
test/integration/testdata/Prefabs/: Projectile.json
test/integration/testdata/Scenes/: level-0.json
test/integration/testdata/Scripts/: PlayerController.lua  ProjectileController.lua
test/src/: Application.cpp  CMakeLists.txt  PrefabManager.cpp  Property.cpp
test/src/Calculation/: Lua53.cpp  Lua53Generator.cpp
test/src/testdata/Prefabs/: Bot.json  Enemy-Tank1.json  Projectile.json  TestLua53Generator_buildInitLuaCode--_03_scene_prefabs--Bot.json
test/src/testdata/Scenes/: TestLua53Generator_buildInitLuaCode--_01_scene_with_gObjects.json  TestLua53Generator_buildInitLuaCode--_01_scene_with_gObjects_and_cmp.json  TestLua53Generator_buildInitLuaCode--_03_scene_prefabs.json  TestLua53_update--_00_update_frame.json  TestLua53_update--_01_input_Fire1.json
test/src/testdata/Scripts/: DroneController.lua
tests/: CMakeLists.txt
tests/Core/: LuaBehaviour.cpp  Vector.cpp
